Fix layout issues on login page.

--- a/map/src/styles/components/_login.scss
+++ b/map/src/styles/components/_login.scss
@@ -1,6 +1,7 @@
 .user-container {
   @include wrapper;
   padding: 0 $grid-padding;
+  display: flex;
 }
 
 .user-account {
